# evalt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: openai-evals-migration.yml
.github/workflows/: ci.yml  publish.yml
docs/: openai-evals-migration.md
examples/: ai_drafted_suite.py  custom-scorer-suite.json  custom_scorer.py  custom_scorer_sdk.py  image_suite.py  passing-result.json  quickstart.py  synthetic-routing-job.json
src/evalt/: __init__.py  __main__.py  acceptance.py  cli.py  core.py  dashboard.py  library.py  migration.py  reporting.py  router.py  scorers.py  webhooks.py
src/evalt/examples/: __init__.py  custom_scorer.py
src/last_good_prompt/: __init__.py  cli.py  core.py  scorers.py
src/modelsieve/: __init__.py  cli.py  core.py
tests/: test_custom_scorers.py  test_library.py  test_monitoring.py  test_sdk.py  test_webhooks.py
